clang/test/BSC/Negative/Parser/detect_eof/detect_eof_struct_1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

[struct // expected-error {{expected expression}}
// expected-error {{expected identifier or '('}}